--- a/serverless.yml
+++ b/serverless.yml
@@ -25,10 +25,8 @@ provider:
   runtime: python3.8
 
 functions:
-  hello:
-    handler: handler.hello
-  get_word:
-    handler: handler.get_word
+  grab_word_from_bag:
+    handler: handler.grab_word_from_bag
   add_word:
     handler: handler.add_word
 
