--- a/serverless.yml
+++ b/serverless.yml
@@ -25,7 +25,7 @@ provider:
   runtime: python3.8
 
 functions:
-  grab_word_from_bag:
+  grab_word_from_bowl:
     handler: handler.grab_word_from_bowl
   add_word:
     handler: handler.add_word
